# vjepa-server

./: .gitignore  README.md  pyproject.toml
scripts/: start_cluster.sh
src/vjepa_server/: __init__.py  model.py  schemas.py  server.py
